// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnChartSpecModel > snapshot > array 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      "a",
      "b",
      "c",
    ],
  },
  "encoding": {
    "color": {
      "condition": {
        "test": "datum["bin_maxbins_10_a_range"] === "null"",
        "value": "#cc4e00",
      },
      "value": "#027864",
    },
    "tooltip": [
      {
        "bin": true,
        "field": "a",
        "format": ".2f",
        "title": "a",
        "type": "nominal",
      },
      {
        "aggregate": "count",
        "format": ",d",
        "title": "Count",
        "type": "quantitative",
      },
    ],
    "x": {
      "axis": null,
      "bin": true,
      "field": "a",
      "type": "nominal",
    },
    "y": {
      "aggregate": "count",
      "axis": null,
      "scale": {
        "type": "linear",
      },
      "type": "quantitative",
    },
  },
  "height": 100,
  "mark": {
    "align": "right",
    "color": "#027864",
    "type": "bar",
  },
}
`;

exports[`ColumnChartSpecModel > snapshot > csv data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      {
        "a": 4,
        "b": 5,
        "c": 6,
      },
    ],
  },
  "encoding": {
    "color": {
      "condition": {
        "test": "datum["bin_maxbins_10_a_range"] === "null"",
        "value": "#cc4e00",
      },
      "value": "#027864",
    },
    "tooltip": [
      {
        "bin": true,
        "field": "a",
        "format": ".2f",
        "title": "a",
        "type": "nominal",
      },
      {
        "aggregate": "count",
        "format": ",d",
        "title": "Count",
        "type": "quantitative",
      },
    ],
    "x": {
      "axis": null,
      "bin": true,
      "field": "a",
      "type": "nominal",
    },
    "y": {
      "aggregate": "count",
      "axis": null,
      "scale": {
        "type": "linear",
      },
      "type": "quantitative",
    },
  },
  "height": 100,
  "mark": {
    "align": "right",
    "color": "#027864",
    "type": "bar",
  },
}
`;

exports[`ColumnChartSpecModel > snapshot > csv string 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      {
        "a": 4,
        "b": 5,
        "c": 6,
      },
    ],
  },
  "encoding": {
    "color": {
      "condition": {
        "test": "datum["bin_maxbins_10_a_range"] === "null"",
        "value": "#cc4e00",
      },
      "value": "#027864",
    },
    "tooltip": [
      {
        "bin": true,
        "field": "a",
        "format": ".2f",
        "title": "a",
        "type": "nominal",
      },
      {
        "aggregate": "count",
        "format": ",d",
        "title": "Count",
        "type": "quantitative",
      },
    ],
    "x": {
      "axis": null,
      "bin": true,
      "field": "a",
      "type": "nominal",
    },
    "y": {
      "aggregate": "count",
      "axis": null,
      "scale": {
        "type": "linear",
      },
      "type": "quantitative",
    },
  },
  "height": 100,
  "mark": {
    "align": "right",
    "color": "#027864",
    "type": "bar",
  },
}
`;

exports[`ColumnChartSpecModel > snapshot > url data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [],
  },
  "encoding": {
    "color": {
      "condition": {
        "test": "datum["bin_maxbins_10_date_range"] === "null"",
        "value": "#cc4e00",
      },
      "value": "#027864",
    },
    "tooltip": [
      {
        "bin": true,
        "field": "date",
        "format": "%Y-%m-%d",
        "title": "date",
        "type": "temporal",
      },
      {
        "aggregate": "count",
        "format": ",d",
        "title": "Count",
        "type": "quantitative",
      },
    ],
    "x": {
      "axis": null,
      "bin": true,
      "field": "date",
      "scale": {
        "align": 0,
        "paddingInner": 0,
        "paddingOuter": {
          "expr": "length(data('data_0')) == 2 ? 1 : length(data('data_0')) == 3 ? 0.5 : length(data('data_0')) == 4 ? 0 : 0",
        },
      },
      "type": "temporal",
    },
    "y": {
      "aggregate": "count",
      "axis": null,
      "type": "quantitative",
    },
  },
  "height": 100,
  "mark": {
    "color": "#027864",
    "type": "bar",
  },
}
`;
